syntax = "proto3";

package raftkv;

service KV {
  rpc Set (SetRequest) returns (SetReply) {}
  rpc Get (GetRequest) returns (GetReply) {}
}

message SetRequest {
  string key = 1;
  string value = 2;
}

message SetReply {
  bool result = 1;
  bool notLeader = 2;
  string leaderGrpcPort = 3;
}

message GetRequest {
  string key = 1;
}

message GetReply {
  string value = 1;
  bool notLeader = 2;
  string leaderGrpcPort = 3;
}
